@@ -40,19 +40,27 @@ end_import
 begin_comment
 comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
-begin_interface
-DECL|interface|CarrotParams
+begin_comment
+comment|/**  * Carrot2 parameter mapping (recognized and mapped if passed via Solr configuration).  */
+end_comment
+begin_class
+DECL|class|CarrotParams
 specifier|public
-interface|interface
+specifier|final
+class|class
 name|CarrotParams
 block|{
 DECL|field|CARROT_PREFIX
+specifier|private
+specifier|static
 name|String
 name|CARROT_PREFIX
 init|=
 literal|"carrot."
 decl_stmt|;
 DECL|field|ALGORITHM
+specifier|public
+specifier|static
 name|String
 name|ALGORITHM
 init|=
@@ -61,6 +69,8 @@ operator|+
 literal|"algorithm"
 decl_stmt|;
 DECL|field|TITLE_FIELD_NAME
+specifier|public
+specifier|static
 name|String
 name|TITLE_FIELD_NAME
 init|=
@@ -69,6 +79,8 @@ operator|+
 literal|"title"
 decl_stmt|;
 DECL|field|URL_FIELD_NAME
+specifier|public
+specifier|static
 name|String
 name|URL_FIELD_NAME
 init|=
@@ -77,6 +89,8 @@ operator|+
 literal|"url"
 decl_stmt|;
 DECL|field|SNIPPET_FIELD_NAME
+specifier|public
+specifier|static
 name|String
 name|SNIPPET_FIELD_NAME
 init|=
@@ -85,6 +99,8 @@ operator|+
 literal|"snippet"
 decl_stmt|;
 DECL|field|LANGUAGE_FIELD_NAME
+specifier|public
+specifier|static
 name|String
 name|LANGUAGE_FIELD_NAME
 init|=
@@ -93,6 +109,8 @@ operator|+
 literal|"lang"
 decl_stmt|;
 DECL|field|CUSTOM_FIELD_NAME
+specifier|public
+specifier|static
 name|String
 name|CUSTOM_FIELD_NAME
 init|=
@@ -101,6 +119,8 @@ operator|+
 literal|"custom"
 decl_stmt|;
 DECL|field|PRODUCE_SUMMARY
+specifier|public
+specifier|static
 name|String
 name|PRODUCE_SUMMARY
 init|=
@@ -109,6 +129,8 @@ operator|+
 literal|"produceSummary"
 decl_stmt|;
 DECL|field|SUMMARY_FRAGSIZE
+specifier|public
+specifier|static
 name|String
 name|SUMMARY_FRAGSIZE
 init|=
@@ -117,6 +139,8 @@ operator|+
 literal|"fragSize"
 decl_stmt|;
 DECL|field|SUMMARY_SNIPPETS
+specifier|public
+specifier|static
 name|String
 name|SUMMARY_SNIPPETS
 init|=
@@ -125,6 +149,8 @@ operator|+
 literal|"summarySnippets"
 decl_stmt|;
 DECL|field|NUM_DESCRIPTIONS
+specifier|public
+specifier|static
 name|String
 name|NUM_DESCRIPTIONS
 init|=
@@ -133,6 +159,8 @@ operator|+
 literal|"numDescriptions"
 decl_stmt|;
 DECL|field|OUTPUT_SUB_CLUSTERS
+specifier|public
+specifier|static
 name|String
 name|OUTPUT_SUB_CLUSTERS
 init|=
@@ -141,6 +169,8 @@ operator|+
 literal|"outputSubClusters"
 decl_stmt|;
 DECL|field|LEXICAL_RESOURCES_DIR
+specifier|public
+specifier|static
 name|String
 name|LEXICAL_RESOURCES_DIR
 init|=
@@ -149,6 +179,8 @@ operator|+
 literal|"lexicalResourcesDir"
 decl_stmt|;
 DECL|field|LANGUAGE_CODE_MAP
+specifier|public
+specifier|static
 name|String
 name|LANGUAGE_CODE_MAP
 init|=
@@ -157,7 +189,6 @@ operator|+
 literal|"lcmap"
 decl_stmt|;
 DECL|field|CARROT_PARAM_NAMES
-specifier|public
 specifier|static
 specifier|final
 name|Set
@@ -180,6 +211,8 @@ name|SNIPPET_FIELD_NAME
 argument_list|,
 name|LANGUAGE_FIELD_NAME
 argument_list|,
+name|CUSTOM_FIELD_NAME
+argument_list|,
 name|PRODUCE_SUMMARY
 argument_list|,
 name|SUMMARY_FRAGSIZE
@@ -191,8 +224,16 @@ argument_list|,
 name|OUTPUT_SUB_CLUSTERS
 argument_list|,
 name|LEXICAL_RESOURCES_DIR
+argument_list|,
+name|LANGUAGE_CODE_MAP
 argument_list|)
 decl_stmt|;
+comment|/** No instances. */
+DECL|method|CarrotParams
+specifier|private
+name|CarrotParams
+parameter_list|()
+block|{}
 block|}
-end_interface
+end_class
 end_unit
